@@ -1,1 +1,3 @@
 -Xmx8192m
+--add-opens=java.base/java.nio=ALL-UNNAMED
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
